welcome.lessons.welcome.methods.basics.Methods.scala.code
        def goAndGet() {
        while(!estSurBiscuit){
        	avance();prend	Biscuit();
        }
        }

        for (i <- 1 to 7) {
            goAndGet();
            right();
            forward();
            left();
        }
